Changed default value for tests property to a pattern. Updated run_tests target accordingly.
Updated link for javadoc.

--- a/bld/build.xml
+++ b/bld/build.xml
@@ -13,7 +13,7 @@
 	<property name="rsrc" value="${basedir}/rsrc" />
 	<property name="rslt" value="${basedir}/junit_results" />
 	<property name="tst" value="${basedir}/tst" />
-	<property name="tests" value="INSERT TESTS TO RUN HERE" />
+	<property name="tests" value="**/*Test*.class" />
 	<property name="war" value="${basedir}/war" />
 	<property name="zip" value="${basedir}/zip" />
 	<property name="info.txt" value="${basedir}/info.txt" />
@@ -218,7 +218,11 @@
 				<pathelement path="${tst}" />
 			</classpath>
 			<formatter type="xml" />
-			<test name="${tests}" todir="${rslt}" />
+			<batchtest todir="${rslt}">
+				<fileset dir="${tst}">
+					<include name="${tests}" />
+				</fileset>
+			</batchtest>
 		</junit>
 	</target>
 
